encoding/jsonschema/testdata/txtar/impossibleallof.txtar
-- schema.json --
{
    "allOf": [
        { "type": "object" },
        { "type": "string" }
    ]
}
-- out/decode/extract --
ERROR:
constraints are not possible to satisfy:
    schema.json:1:1
constraints are not possible to satisfy:
    schema.json:4:9
